--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Random Seat Generator</title>
+  <title>s3sf</title>
 
   <style>
     body {
@@ -87,13 +87,13 @@
   </style>
 </head>
 <body>
-  <h1>🎲 Random Classroom Seat Generator</h1>
+  <h1>macee attackkk!</h1>
 
-  <p>Enter all student names (one per line):</p>
+  <p>names (one per line):</p>
   <textarea id="names"></textarea>
 
   <br />
-  <button onclick="assignSeats()">Randomly Assign Seats</button>
+  <button onclick="assignSeats()">fate</button>
 
   <div class="classroom" id="classroom"></div>
 
